...
        .font(
          .system(.headline, design: .rounded)
          .bold()
        )
    }
    .disabled(viewModel.isLoading)
    .accessibilityIdentifier("createBtn")
  }
  
  var refresh: some View {
    Button {
      Task {
        await viewModel.fetchUsers()
...
